# lambdarunner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish_pypi.yaml  release_major.yaml  release_minor.yaml  release_patch.yaml  renovate.yml
lambdarunner/: __init__.py  cli.py  context.py  loader.py  runner.py  templates.py
tests/: test_cli.py  test_context.py  test_runner.py  test_templates.py
tests/fixtures/: sample_event.json  sample_handler.py
