[tool.poetry]
name = "lambdarunner"
version = "0.2.1"
description = "Run AWS Lambda handlers locally. No Docker, no SAM, no AWS connection required."
authors = ["buziraku <buziraku@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["aws", "lambda", "serverless", "local", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]
packages = [{ include = "lambdarunner" }]

[tool.poetry.scripts]
lambdarunner = "lambdarunner.cli:app"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = "==0.24.1"
rich = "==14.3.3"
watchfiles = {version = "==1.1.1", optional = true}

[tool.poetry.extras]
watch = ["watchfiles"]

[tool.poetry.group.dev.dependencies]
pytest = "==9.0.2"
ruff = "==0.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
